style.css
h1, h2, h3 {
    font-family: 'Ubuntu', sans-serif;
    margin-left: 9px;
}
p, span, a {
    font-family: 'Raleway', sans-serif;
    margin-left: 9px;
}
@keyframes bou {
    0%{left: 0px;}
    100%{left: 20px;}
}
@keyframes bouo {
    0%{left: 20px;}
    100%{left: 0px;}
}
/*.bounce{
  position: relative;
}
.bounce:hover {
    animation-name: bou;
    animation-duration: 1s;
    left: 20px;
}
.bounce:not(:hover) {
    animation-name: bouo;
    animation-duration: 1s;
    left: 0px;
}*/
@keyframes main {
    0%{opacity: 0%;}
    50%{opacity: 0%;}
    100%{opacity: 100%;}
}
body {
    animation: main 2s;
    font-family: 'Raleway', sans-serif;
}



.parallax > use {
  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
}
.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}
.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}
.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}
.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}
@keyframes move-forever {
  0% {
   transform: translate3d(-90px,0,0);
  }
  100% { 
    transform: translate3d(85px,0,0);
  }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {
  .waves {
    height:40px;
    min-height:40px;
  }
  .content {
    height:30vh;
  }
  h1 {
    font-size:24px;
  }
}


ul {
  list-style-type: circle;
  list-style-position: outside;
}


a {
  text-decoration: none;
  color: white;
  background-color: rgba(0, 0, 0, 0.25);
  padding: 8px;
  border-radius: 600px;
}
@keyframes but {
  0%{
    color: white;
    background-color: rgba(0, 0, 0, 0.25);
  }
  100% {
    background-color: white;
    color: black;
  }
}
@keyframes buto {
  100%{
    color: white;
    background-color: rgba(0, 0, 0, 0.25);
  }
  0% {
    background-color: white;
    color: black;
  }
}
a:hover {
  animation: but 1s;
  text-decoration: none;
  background-color: white;
  color: black;
}
a:not(:hover) {
  animation: buto 1s;
}

